--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,17 @@
   <title>AlbumApp</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+  <%= stylesheet_link_tag "flexslider" %>
+  <%= javascript_include_tag "jquery.flexslider.js" %>
+  
+  <script type="text/javascript">
+			$(window).load(function() {
+				$('.flexslider').flexslider({
+					animation: "slide"
+				});
+			});
+		</script>
+	<%= csrf_meta_tags %>
 </head>
 <body>
 <%= render :partial => 'layouts/header'%>
